@@ -56,12 +56,22 @@
                 </configuration>
                 <executions>
                     <execution>
-                        <phase>validate</phase>
+                        <!-- TODO: replace with validate phase when prettier supports patterns in switch https://github.com/jhipster/prettier-java/issues/510 -->
+                        <phase>deploy</phase>
                         <goals>
                             <goal>${prettier.plugin.goal}</goal>
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
             </plugin>
         </plugins>
         <pluginManagement>
@@ -70,6 +80,9 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${surefire.version}</version>
+                    <configuration>
+                        <argLine>--enable-preview</argLine>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
